Replace most flare collections with arrays